java11 server webprogramming

--- a/test25/WebContent/WEB-INF/web.xml
+++ b/test25/WebContent/WEB-INF/web.xml
@@ -9,4 +9,21 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <context-param>
+  	<description>전역 변수 설정</description>
+  	<param-name>admin</param-name>
+  	<param-value>chowoojin</param-value>
+  </context-param>
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/notFoundErrorPage.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/notAllowedErrorPage.jsp</location>
+  </error-page>
+  <error-page>
+  	<exception-type>java.lang.NumberFormatException</exception-type>
+  	<location>/errorPage.jsp</location>
+  </error-page>
 </web-app>
